--- a/recursos/css/styles1.css
+++ b/recursos/css/styles1.css
@@ -1,132 +1,21 @@
-:root {
-    --primary-color: black;
-    --yellow-color: yellow;
-    --white-color: white;
-    --light-gray-color: gray;
-    --gap: 3rem;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 2rem;
-    color: var(--primary-color);    
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
-}
-
-h1 {
-    font-size: 6rem;
-    text-transform: uppercase;
-}
-
-h2 {
-    font-size: 5.5rem;
-}
-
-h3 {
-    font-size: 5rem;
-}
-
-h4 {
-    font-size: 4.5rem;
-}
-
-h5 {
-    font-size: 4rem;
-}
-
-h6 {
-    font-size: 3.5rem;
-}
-
-a {
-    text-decoration: none;
-}
-
-.main-bg {
-    background-image: url(../img/main-bg.svg);
-    color: var(--yellow-color);
-    background-size: cover;
-    background-position: center center;
-}
-
-.white-bg {
-    background: var(--white-color);
-}
-
-.main-content {
-    max-width: 120rem;
-    margin: 0 auto;
-    padding: var(--gap);
-}  
-
-.section {
-    min-height: 100vh;
-}
-
-.menu {
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    width: 100%;
-    border-bottom: 0.1rem solid var(--light-gray-color);
-}
-
-.menu-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 0;
-    padding-bottom: 0;
-}
-
-.menu h1 {
-    font-size: 2.3rem;
-    color: var(--primary-color);
-}
-
-.menu h1 a {
-    font-size: 2.3rem;
-    color: inherit;
-}
-
-.menu ul {
-    list-style: none;
-    display: flex;
-}
-
-.menu ul li a {
-    display: block;
-    padding: 2rem;
-    font-size: 1.5rem;
-    color: var(--primary-color);
+.intro-content {
     position: relative;
+    top: -8rem;
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    gap: var(--gap);
+    height: 100vh;
 }
 
-.menu ul li a::after {
-    content: '';
-    position: absolute;
-    bottom: 1.5rem;
-    left: 50%;
-    width: 0;
-    height: 0.2rem;
-    background: var(--primary-color);
-    transition: all 300ms ease-in-out;
+.intro-text-content {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
 }
 
-.menu ul li a:hover::after {
-    width: 50%;
-    left: 25%;
+.intro-text-content h2 {
+    font-size: 5rem;
+    margin-bottom: 5rem;
+    text-transform: uppercase;
+    line-height: 1.2;
 }
