--- a/recursos/css/styles1.css
+++ b/recursos/css/styles1.css
@@ -7,7 +7,7 @@
     height: 100vh;
 }
 
-.intro-text-content {
+.intro-text-content, .intro-img {
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
@@ -18,4 +18,10 @@
     margin-bottom: 5rem;
     text-transform: uppercase;
     line-height: 1.2;
+}
+
+.intro-img img {
+    max-width: 100%;
+    height: auto;
+    
 }
