--- a/recursos/css/styles1.css
+++ b/recursos/css/styles1.css
@@ -4,7 +4,7 @@
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     gap: var(--gap);
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .intro-text-content, .intro-img {
@@ -21,7 +21,8 @@
 .top3-content {
     max-width: 64rem;
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
+    flex-wrap: nowrap;
     justify-content: center;
     height: 100vh;
     text-align: center;
@@ -31,7 +32,7 @@
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
-    height: 100vh;    
+    min-height: 100vh;    
 }
 
 .grid-main-heading {
@@ -64,4 +65,19 @@
     font-style: italic;
     top: -4rem;
     left: -2rem;
+}
+
+.gallery-img {
+    width: 100%;
+    max-width: 35rem;
+    max-height: 35rem;
+    overflow: hidden;
+}
+
+.gallery-img img {
+    transition: all 300ms ease-in-out;
+}
+
+.gallery-img img:hover {
+    transform: translate(-3%, -3%) scale(1.2) rotate(5deg);
 }
