--- a/recursos/css/variables.css
+++ b/recursos/css/variables.css
@@ -3,5 +3,6 @@
     --yellow-color: yellow;
     --white-color: white;
     --light-gray-color: gray;
+    --light-yellow-color: #e9e936f6;
     --gap: 3rem;
 }
